--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "@types/react": "~18.3.12",
     "typescript": "^5.3.3"
   },
+  "overrides": {
+    "@types/react": "~18.3.12"
+  },
   "private": true
 }
