--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@expo-google-fonts/roboto": "^0.2.3",
+    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/native-stack": "^7.2.0",
     "@types/styled-components-react-native": "^5.2.5",
     "expo": "~52.0.35",
     "expo-font": "~13.0.3",
@@ -17,8 +19,10 @@
     "phosphor-react-native": "^2.3.1",
     "react": "18.3.1",
     "react-native": "0.76.7",
-    "styled-components": "^6.1.15",
-    "react-native-svg": "15.8.0"
+    "react-native-safe-area-context": "^4.12.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-svg": "15.8.0",
+    "styled-components": "^6.1.15"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
